<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Kids</string>
    <string name="comments">Comments</string>
    <string name="kids">Kids</string>
    <string name="user_profile">User Profile</string>
    <string name="submit">Submit</string>
    <string name="start_your_first_step">Start your first step to Education</string>
    <string name="first_step_to_learn">First step to learn</string>
    <string name="create_account">Create New Account</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>

    <string name="vehicles">vehicles</string>
    <string name="animals">Animals</string>
    <string name="colours">colours</string>
    <string name="picture_identify">Picture Identify</string>
    <string name="type_the_colour">Type the colour</string>
    <string name="colours1">Colours</string>
    <string name="delete">Delete</string>

    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="numbertopic">Numbers</string>
    <string name="_7">7</string>
    <string name="_5">5</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="_0">0</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="headingt1">App Name</string>
    <string name="numbers">Numbers</string>
    <string name="learn_to_count">Learn To Count</string>
    <string name="count_amp_type"><![CDATA[Count & Type]]></string>
    <string name="_7_9">7  +  9  =  ?</string>
    <string name="answer">Answer</string>
    <string name="numtextnew">7 + 9 = ?</string>
    <string name="numtextnew1">7 - 9 = ?</string>
    <string name="next">Next</string>

    <string name="stories_for_kids">Stories for Kids</string>
    <string name="lowercase">lowercase</string>
    <string name="uppercase">UPPERCASE</string>
    <string name="naming_the_image">Naming the Image</string>
    <string name="p">P</string>
    <string name="enter_name">Enter Name</string>

    <string name="name">Name</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="submit_and_next">Submit and Next</string>
    <string name="finish">Finish</string>
    <string name="ten_10">TEN 10</string>
    <string name="pronounce_ten">Pronounce TEN</string>
    <string name="pronounce_nine">Pronounce NINE</string>
    <string name="nine_9">NINE 9</string>
    <string name="pronounce_eight">Pronounce EIGHT</string>
    <string name="eight_8">EIGHT 8</string>
    <string name="pronounce_seven">Pronounce SEVEN</string>
    <string name="seven_7">SEVEN 7</string>
    <string name="pronounce_six">Pronounce SIX</string>
    <string name="six_6">SIX 6</string>
    <string name="pronounce_five">Pronounce Five</string>
    <string name="pronounce_four">Pronounce Four</string>
    <string name="four_4">FOUR 4</string>
    <string name="three_3">THREE 3</string>
    <string name="pronounce_three">Pronounce Three</string>
    <string name="two_2">Two 2</string>
    <string name="pronounce_two">Pronounce Two</string>
    <string name="one_1">ONE 1</string>
    <string name="pronounce_one">Pronounce One</string>
    <string name="Name">name</string>
    <string name="subtraction">Subtraction</string>
    <string name="learning_numbers">Learning Numbers</string>
    <string name="numbering">Numbering</string>
    <string name="addition">Addition</string>
    <string name="subtract">Subtract</string>
    <string name="delete_stats">Delete Stats</string>
    <string name="five_5xx">Five 5</string>
    <string name="one_1xx">One 1</string>
    <string name="seven_7x">Seven 7</string>
    <string name="four_4x">Four 4</string>
    <string name="ten_10x">Ten 10</string>
    <string name="nine_9x">Nine 9</string>
    <string name="eight_8x">Eight 8</string>
    <string name="three_3x">Three 3</string>
    <string name="six_6x">Six 6</string>

</resources>




