<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Numbers">

    <TextView
        android:id="@+id/textView"
        android:layout_width="257dp"
        android:layout_height="90dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/roundbutton"
        android:gravity="center"
        android:text="@string/numbertopic"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textStyle="bold" />


    <Button
        android:id="@+id/btn3"
        android:layout_width="85dp"
        android:layout_height="81dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/numbtncol"
        android:text="@string/_3"
        android:textStyle="bold"
        android:textColor="@color/numtextcol"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="85dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/numbtncol"
        android:text="@string/_9"
        android:textStyle="bold"
        android:textColor="@color/numtextcol"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn6" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="85dp"
        android:layout_height="80dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/numbtncol"
        android:text="@string/_6"
        android:textStyle="bold"
        android:textColor="@color/numtextcol"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="85dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:background="@color/numbtncol"
        android:text="@string/_7"
        android:textStyle="bold"
        android:textColor="@color/numtextcol"
        android:textSize="35sp"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="85dp"
        android:layout_height="80dp"
        android:layout_marginTop="64dp"
        android:background="@color/numbtncol"
        android:text="@string/_1"
        android:textStyle="bold"
        android:textColor="@color/numtextcol"
        android:textSize="35sp"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="85dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@color/numbtncol"
        android:text="@string/_8"
        android:textStyle="bold"
        android:textColor="@color/numtextcol"
        android:textSize="35sp"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintTop_toBottomOf="@+id/btn5" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="85dp"
        android:layout_height="80dp"
        android:layout_marginTop="44dp"
        android:background="@color/numbtncol"
        android:text="@string/_4"
        android:textStyle="bold"
        android:textColor="@color/numtextcol"
        android:textSize="35sp"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="81dp"
        android:layout_height="80dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@color/numbtncol"
        android:text="@string/_2"
        android:textStyle="bold"
        android:textColor="@color/numtextcol"
        android:textSize="35sp"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="85dp"
        android:layout_height="80dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@color/numbtncol"
        android:text="@string/_5"
        android:textStyle="bold"
        android:textColor="@color/numtextcol"
        android:textSize="35sp"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="85dp"
        android:layout_height="80dp"
        android:layout_marginTop="36dp"
        android:background="@color/numbtncol"
        android:text="@string/_0"
        android:textStyle="bold"
        android:textColor="@color/numtextcol"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn8" />


</androidx.constraintlayout.widget.ConstraintLayout>