<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgpic"
    tools:context=".subtract">

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="208dp"
        android:layout_height="53dp"
        android:layout_marginTop="44dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/answer"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="310dp"
        android:layout_height="112dp"
        android:layout_marginTop="168dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:text="@string/numtextnew1"
        android:textColor="#F80606"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="305dp"
        android:layout_height="89dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/roundbutton3"
        android:gravity="center"
        android:text="@string/subtract"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.673"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="125dp"
        android:layout_height="56dp"
        android:layout_marginTop="56dp"
        android:text="@string/submit"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName8" />

    <Button
        android:id="@+id/button4"
        android:layout_width="139dp"
        android:layout_height="56dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/next"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName8" />
</androidx.constraintlayout.widget.ConstraintLayout>