<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile"
    android:background="@drawable/login_back2">

    <TextView
        android:id="@+id/profileFullName"
        android:layout_width="359dp"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textColor="#33536C"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImageView"
        tools:ignore="TextViewEdits" />

    <!--app:srcCompat="@drawable/login_back2" -->

    <TextView
        android:id="@+id/profileImageView"
        android:layout_width="250dp"
        android:layout_height="62dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/amaranth"
        android:text="@string/user_profile"
        android:textColor="#082A45"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileEmailAddress"
        android:layout_width="365dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/your_email_address"
        android:textColor="#33536C"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileFullName"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/profilePhoneNo"
        android:layout_width="367dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/phone"
        android:textColor="#33536C"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileEmailAddress"
        tools:ignore="TextViewEdits" />

    <Button
        android:id="@+id/saveProfileInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="152dp"
        android:background="#256191"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePhoneNo"
        app:layout_constraintVertical_bias="0.788" />

</androidx.constraintlayout.widget.ConstraintLayout>