<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    android:background="@drawable/abc3"
    tools:context=".Alphabet">

    <Button
        android:id="@+id/button32"
        android:layout_width="345dp"
        android:layout_height="102dp"
        android:layout_marginBottom="152dp"
        android:background="@drawable/roundbutton2"
        android:text="@string/lowercase"
        android:textColor="#FDFBFB"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/button33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="322dp"
        android:layout_height="112dp"
        android:layout_marginBottom="132dp"
        android:background="@drawable/roundbutton"
        android:text="@string/uppercase"
        android:textAllCaps="true"
        android:textColor="#FDFBFB"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/button32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948" />

    <Button
        android:id="@+id/button33"
        android:layout_width="281dp"
        android:layout_height="136dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/roundbutton3"
        android:text="@string/naming_the_image"
        android:textColor="#FDFBFB"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>