<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AEFFEB3B"
    tools:context=".PictureIdentify">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="227dp"
        android:layout_height="57dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/roundbuttonsach1"
        android:gravity="center"
        android:text="@string/picture_identify"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="107dp"
        android:layout_height="82dp"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/sach1" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="172dp"
        android:layout_height="119dp"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@drawable/sach222" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="139dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/colours"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="129dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/animals"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="237dp"
        android:layout_height="89dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@drawable/sach3" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="129dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/vehicles"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

</androidx.constraintlayout.widget.ConstraintLayout>